--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ body {
   font-family: 'Press Start 2P', sans-serif;
   color: #eee;
   background-color: #222;
-  /* background-color: #60b347; */
 }
 
 /* LAYOUT */
@@ -31,9 +30,11 @@ main {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  flex-wrap: wrap; /* Allows items to stack on smaller screens */
+  padding: 2rem;
 }
 
-.left {
+.left, .right {
   width: 52rem;
   display: flex;
   flex-direction: column;
@@ -41,7 +42,6 @@ main {
 }
 
 .right {
-  width: 52rem;
   font-size: 2rem;
 }
 
@@ -51,7 +51,7 @@ h1 {
   text-align: center;
   position: absolute;
   width: 100%;
-  top: 52%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -61,7 +61,7 @@ h1 {
   color: #333;
   font-size: 6rem;
   width: 15rem;
-  padding: 3rem 0rem;
+  padding: 3rem 0;
   text-align: center;
   position: absolute;
   bottom: 0;
@@ -116,4 +116,74 @@ h1 {
 
 .label-score {
   margin-bottom: 2rem;
+}
+
+/* MEDIA QUERIES FOR RESPONSIVENESS */
+@media (max-width: 768px) {
+  html {
+    font-size: 55%;
+  }
+
+  h1 {
+    font-size: 3rem;
+  }
+
+  .number {
+    font-size: 4rem;
+    width: 12rem;
+    padding: 2rem 0;
+  }
+
+  .left, .right {
+    width: 100%;
+    text-align: center;
+  }
+
+  .guess {
+    font-size: 4rem;
+    width: 20rem;
+  }
+
+  .btn {
+    font-size: 1.8rem;
+    padding: 1.5rem 2.5rem;
+  }
+}
+
+@media (max-width: 480px) {
+  html {
+    font-size: 50%;
+  }
+
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  .number {
+    font-size: 3.5rem;
+    width: 10rem;
+    padding: 1.5rem 0;
+  }
+
+  .between,
+  .again {
+    font-size: 1.2rem;
+    top: 1.5rem;
+    left: 1.5rem;
+  }
+
+  .guess {
+    font-size: 3.5rem;
+    width: 18rem;
+    padding: 2rem;
+  }
+
+  .btn {
+    font-size: 1.6rem;
+    padding: 1.2rem 2rem;
+  }
+
+  .message {
+    margin-bottom: 5rem;
+  }
 }
